--- a/ObhodBApp/MainWindow.axaml
+++ b/ObhodBApp/MainWindow.axaml
@@ -85,13 +85,34 @@
                 <materialIcons:MaterialIcon Name="MainBtnIcon" Padding="20" Kind="Web" IconSize="150" />
             </Button>
             <TextBlock Grid.Row="2" FontSize="20" FontWeight="Bold" Name="IpInfo" Text="Ваш IP: ..." HorizontalAlignment="Center"/>
-            <Button Grid.Row="3" CornerRadius="100" HorizontalAlignment="Center" Margin="10" Padding="10" FontSize="20" FontWeight="Bold">
+            <Button ToolTip.Placement="Bottom" Grid.Row="3" CornerRadius="100" HorizontalAlignment="Center" Margin="10" Padding="10" FontSize="20" FontWeight="Bold">
                 <StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
                     <materialIcons:MaterialIcon Kind="Upload" Foreground="Orange"/>
                     <TextBlock VerticalAlignment="Center" Name="UplText" >10Mb/s</TextBlock>
                     <materialIcons:MaterialIcon Kind="Download" Foreground="Green"/>
                     <TextBlock VerticalAlignment="Center" Name="DwlText">10Mb/s</TextBlock>
                 </StackPanel>
+                <ToolTip.Tip>
+                    <StackPanel Margin="10">
+                        <TextBlock FontSize="16" FontWeight="Bold" Padding="3">Средняя скорость</TextBlock>
+                        <StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
+                            <materialIcons:MaterialIcon Kind="ClockTimeEight" Foreground="Orange"/>
+                            <TextBlock VerticalAlignment="Center" Name="Time" >0</TextBlock>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
+                            <materialIcons:MaterialIcon Kind="Upload" Foreground="Orange"/>
+                            <TextBlock VerticalAlignment="Center" Name="MUplText" >10Mb/s</TextBlock>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
+                            <materialIcons:MaterialIcon Kind="Download" Foreground="Green"/>
+                            <TextBlock VerticalAlignment="Center" Name="MDwlText">10Mb/s</TextBlock>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
+                            <materialIcons:MaterialIcon Kind="AlertCircle" Foreground="Red"/>
+                            <TextBlock VerticalAlignment="Center" Name="ErrPckText">10Mb/s</TextBlock>
+                        </StackPanel>
+                    </StackPanel>
+                </ToolTip.Tip>
             </Button>
             <Button Grid.Row="4" CornerRadius="100" HorizontalAlignment="Center" Margin="10" Padding="10" FontSize="20" FontWeight="Bold">
                 <StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
