--- a/ObhodBApp/MainWindow.axaml
+++ b/ObhodBApp/MainWindow.axaml
@@ -5,135 +5,130 @@
         xmlns:materialIcons="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
         xmlns:lvc="using:LiveChartsCore.SkiaSharpView.Avalonia"
         xmlns:skiaSharpView="clr-namespace:LiveChartsCore.SkiaSharpView;assembly=LiveChartsCore.SkiaSharpView"
-        mc:Ignorable="d" d:DesignWidth="600" d:DesignHeight="950"
+        mc:Ignorable="d" d:DesignWidth="600" d:DesignHeight="900"
         Icon="avares://ObhodBApp/icon.ico"
-        Height="950"
+        Height="900"
         Width="600"
         x:Class="ObhodBApp.MainWindow"
         Title="ObhodBApp">
     <DockPanel>
-        <!-- Верхнее меню -->
-        <Menu DockPanel.Dock="Top">
-            <!-- Файл -->
-            <MenuItem>
-                <MenuItem.Header>
+        <TabControl DockPanel.Dock="Top" Margin="0">
+            <TabItem>
+                <TabItem.Header>
                     <StackPanel Orientation="Horizontal" Spacing="5">
-                        <materialIcons:MaterialIcon Kind="File" />
-                        <TextBlock Text="Файл" />
+                        <materialIcons:MaterialIcon Kind="Home"/>
+                        <TextBlock Text="Основная" FontWeight="Bold"/>
                     </StackPanel>
-                </MenuItem.Header>
+                </TabItem.Header>
 
-                <MenuItem>
-                    <MenuItem.Header>
-                        <StackPanel Orientation="Horizontal" Spacing="5">
-                            <materialIcons:MaterialIcon Kind="FolderOpen" />
-                            <TextBlock Text="Открыть..." />
-                        </StackPanel>
-                    </MenuItem.Header>
-                </MenuItem>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="300"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
 
-                <MenuItem>
-                    <MenuItem.Header>
-                        <StackPanel Orientation="Horizontal" Spacing="5">
-                            <materialIcons:MaterialIcon Kind="ContentSave" />
-                            <TextBlock Text="Сохранить" />
-                        </StackPanel>
-                    </MenuItem.Header>
-                </MenuItem>
+                    <DropDownButton Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Top"
+                                    CornerRadius="100" FontSize="30" Padding="10"
+                                    FontWeight="Bold" Margin="20"
+                                    Content="Выберите профиль NGPN">
+                        <DropDownButton.Flyout>
+                            <MenuFlyout>
+                                <MenuItem Header="Option 1" />
+                                <MenuItem Header="Option 2" />
+                                <MenuItem Header="Option 3" />
+                            </MenuFlyout>
+                        </DropDownButton.Flyout>
+                    </DropDownButton>
 
-                <MenuItem>
-                    <MenuItem.Header>
-                        <StackPanel Orientation="Horizontal" Spacing="5">
-                            <materialIcons:MaterialIcon Kind="ExitToApp" />
-                            <TextBlock Text="Выход" />
-                        </StackPanel>
-                    </MenuItem.Header>
-                </MenuItem>
-            </MenuItem>
+                    <Button Grid.Row="1" Name="MainBtn" Margin="40" HorizontalAlignment="Center"
+                            CornerRadius="100" Click="MainBtn_OnClick">
+                        <materialIcons:MaterialIcon Name="MainBtnIcon" Padding="20" Kind="Web" IconSize="150" />
+                    </Button>
 
-            <!-- Настройки -->
-            <MenuItem>
-                <MenuItem.Header>
-                    <StackPanel Orientation="Horizontal" Spacing="5">
-                        <materialIcons:MaterialIcon Kind="Settings" />
-                        <TextBlock Text="Настройки" />
-                    </StackPanel>
-                </MenuItem.Header>
-            </MenuItem>
-        </Menu>
+                    <TextBlock Grid.Row="2" FontSize="20" FontWeight="Bold"
+                               Name="IpInfo" Text="Ваш IP: ..."
+                               HorizontalAlignment="Center"/>
 
-        <!-- Основное содержимое -->
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="300"></RowDefinition>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
-            
-            <DropDownButton Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Top" CornerRadius="100" FontSize="30" Padding="10" FontWeight="Bold" Margin="20" Content=" Выберите профиль NGPN">
-                <DropDownButton.Flyout>
-                    <MenuFlyout>
-                        <MenuItem Header="Option 1" />
-                        <MenuItem Header="Option 2" />
-                        <MenuItem Header="Option 3" />
-                    </MenuFlyout>
-                </DropDownButton.Flyout>
-            </DropDownButton>
-            <Button Grid.Row="1" Name="MainBtn" Margin="40" HorizontalAlignment="Center" CornerRadius="100" Click="MainBtn_OnClick">
-                <materialIcons:MaterialIcon Name="MainBtnIcon" Padding="20" Kind="Web" IconSize="150" />
-            </Button>
-            <TextBlock Grid.Row="2" FontSize="20" FontWeight="Bold" Name="IpInfo" Text="Ваш IP: ..." HorizontalAlignment="Center"/>
-            <Button ToolTip.Placement="Bottom" Grid.Row="3" CornerRadius="100" HorizontalAlignment="Center" Margin="10" Padding="10" FontSize="20" FontWeight="Bold">
-                <StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
-                    <materialIcons:MaterialIcon Kind="Upload" Foreground="Orange"/>
-                    <TextBlock VerticalAlignment="Center" Name="UplText" >10Mb/s</TextBlock>
-                    <materialIcons:MaterialIcon Kind="Download" Foreground="Green"/>
-                    <TextBlock VerticalAlignment="Center" Name="DwlText">10Mb/s</TextBlock>
-                </StackPanel>
-                <ToolTip.Tip>
-                    <StackPanel Margin="10">
-                        <TextBlock FontSize="16" FontWeight="Bold" Padding="3">Средняя скорость</TextBlock>
-                        <StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
-                            <materialIcons:MaterialIcon Kind="ClockTimeEight" Foreground="Orange"/>
-                            <TextBlock VerticalAlignment="Center" Name="Time" >0</TextBlock>
-                        </StackPanel>
+                    <Button ToolTip.Placement="Bottom" Grid.Row="3" CornerRadius="100"
+                            HorizontalAlignment="Center" Margin="10" Padding="10"
+                            FontSize="20" FontWeight="Bold">
                         <StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
                             <materialIcons:MaterialIcon Kind="Upload" Foreground="Orange"/>
-                            <TextBlock VerticalAlignment="Center" Name="MUplText" >10Mb/s</TextBlock>
-                        </StackPanel>
-                        <StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
+                            <TextBlock VerticalAlignment="Center" Name="UplText">10Mb/s</TextBlock>
                             <materialIcons:MaterialIcon Kind="Download" Foreground="Green"/>
-                            <TextBlock VerticalAlignment="Center" Name="MDwlText">10Mb/s</TextBlock>
+                            <TextBlock VerticalAlignment="Center" Name="DwlText">10Mb/s</TextBlock>
                         </StackPanel>
+
+                        <ToolTip.Tip>
+                            <StackPanel Margin="10">
+                                <TextBlock FontSize="16" FontWeight="Bold" Padding="3">Средняя скорость</TextBlock>
+                                <StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
+                                    <materialIcons:MaterialIcon Kind="ClockTimeEight" Foreground="Orange"/>
+                                    <TextBlock VerticalAlignment="Center" Name="Time">0</TextBlock>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
+                                    <materialIcons:MaterialIcon Kind="Upload" Foreground="Orange"/>
+                                    <TextBlock VerticalAlignment="Center" Name="MUplText">10Mb/s</TextBlock>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
+                                    <materialIcons:MaterialIcon Kind="Download" Foreground="Green"/>
+                                    <TextBlock VerticalAlignment="Center" Name="MDwlText">10Mb/s</TextBlock>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
+                                    <materialIcons:MaterialIcon Kind="AlertCircle" Foreground="Red"/>
+                                    <TextBlock VerticalAlignment="Center" Name="ErrPckText">10Mb/s</TextBlock>
+                                </StackPanel>
+                            </StackPanel>
+                        </ToolTip.Tip>
+                    </Button>
+
+                    <Button Grid.Row="4" CornerRadius="100" HorizontalAlignment="Center"
+                            Margin="10" Padding="10" FontSize="20" FontWeight="Bold">
                         <StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
-                            <materialIcons:MaterialIcon Kind="AlertCircle" Foreground="Red"/>
-                            <TextBlock VerticalAlignment="Center" Name="ErrPckText">10Mb/s</TextBlock>
+                            <materialIcons:MaterialIcon Kind="TrayDownload"/>
+                            <TextBlock VerticalAlignment="Center" Name="TrafficText">10Mb/s</TextBlock>
                         </StackPanel>
+                    </Button>
+
+                    <lvc:CartesianChart Grid.Row="5" Name="Chart" Height="300">
+                        <lvc:CartesianChart.XAxes>
+                            <skiaSharpView:Axis IsVisible="False" />
+                        </lvc:CartesianChart.XAxes>
+                        <lvc:CartesianChart.YAxes>
+                            <skiaSharpView:Axis IsVisible="True" />
+                        </lvc:CartesianChart.YAxes>
+                    </lvc:CartesianChart>
+                </Grid>
+            </TabItem>
+            
+            <TabItem>
+                <TabItem.Header>
+                    <StackPanel Orientation="Horizontal" Spacing="5">
+                        <materialIcons:MaterialIcon Kind="Console"/>
+                        <TextBlock Text="Консоль"  FontWeight="Bold"/>
                     </StackPanel>
-                </ToolTip.Tip>
-            </Button>
-            <Button Grid.Row="4" CornerRadius="100" HorizontalAlignment="Center" Margin="10" Padding="10" FontSize="20" FontWeight="Bold">
-                <StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
-                    <materialIcons:MaterialIcon Kind="TrayDownload"/>
-                    <TextBlock VerticalAlignment="Center" Name="TrafficText">10Mb/s</TextBlock>
-                </StackPanel>
-            </Button>
-            <lvc:CartesianChart Grid.Row="5" Name="Chart" Height="300">
-                <lvc:CartesianChart.XAxes>
-                    <skiaSharpView:Axis IsVisible="False" />
-                </lvc:CartesianChart.XAxes>
-                <lvc:CartesianChart.YAxes>
-                    <skiaSharpView:Axis IsVisible="True" />
-                </lvc:CartesianChart.YAxes>
-            </lvc:CartesianChart>
-            <ScrollViewer Grid.Row="6" VerticalScrollBarVisibility="Auto" CornerRadius="100"
-                          HorizontalScrollBarVisibility="Auto" Height="90">
-                <TextBlock Name="ConsoleTextBlock" FontFamily="Consolas" TextWrapping="Wrap" Background="Black"/>
-            </ScrollViewer>
-        </Grid>
+                </TabItem.Header>
+
+                <ScrollViewer VerticalScrollBarVisibility="Auto" CornerRadius="100"
+                              HorizontalScrollBarVisibility="Auto">
+                    <TextBlock Name="ConsoleTextBlock" Padding="20" FontSize="18"
+                               FontFamily="Consolas" TextWrapping="Wrap" Background="Black"/>
+                </ScrollViewer>
+            </TabItem>
+
+            <TabItem>
+                <TabItem.Header>
+                    <StackPanel Orientation="Horizontal" Spacing="5">
+                        <materialIcons:MaterialIcon Kind="Settings"/>
+                        <TextBlock Text="Настройки"  FontWeight="Bold"/>
+                    </StackPanel>
+                </TabItem.Header>
+            </TabItem>
+        </TabControl>
     </DockPanel>
 </Window>
