--- a/ObhodBApp/App.axaml
+++ b/ObhodBApp/App.axaml
@@ -8,5 +8,6 @@
     <Application.Styles>
         <FluentTheme />
         <materialIcons:MaterialIconStyles />
+        <StyleInclude Source="avares://AvaloniaEdit/Themes/Fluent/AvaloniaEdit.xaml"/>
     </Application.Styles>
 </Application>
