--- a/ObhodBApp/MainWindow.axaml
+++ b/ObhodBApp/MainWindow.axaml
@@ -32,7 +32,8 @@
                         <RowDefinition Height="300"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
-
+                    
+                    
                     <Button Grid.Row="1" Name="MainBtn" Margin="60" HorizontalAlignment="Center"
                             CornerRadius="150" Click="MainBtn_OnClick">
                         <materialIcons:MaterialIcon Name="MainBtnIcon" Padding="20" Kind="Web" IconSize="200" />
@@ -53,30 +54,24 @@
                         </StackPanel>
 
                         <ToolTip.Tip>
-                            <Border>
-                                <Border.RenderTransform>
-                                    <ScaleTransform ScaleX="1.5" ScaleY="1.5"/> <!-- масштаб 1.5x -->
-                                </Border.RenderTransform>
-
-                                <StackPanel Margin="5">
-                                    <StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
-                                        <materialIcons:MaterialIcon Kind="ClockTimeEight" Foreground="Orange"/>
-                                        <TextBlock VerticalAlignment="Center" Name="Time">Время работы...</TextBlock>
-                                    </StackPanel>
-                                    <StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
-                                        <materialIcons:MaterialIcon Kind="Upload" Foreground="Orange"/>
-                                        <TextBlock VerticalAlignment="Center" Name="MUplText">Отправка</TextBlock>
-                                    </StackPanel>
-                                    <StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
-                                        <materialIcons:MaterialIcon Kind="Download" Foreground="Green"/>
-                                        <TextBlock VerticalAlignment="Center" Name="MDwlText">Загрузка</TextBlock>
-                                    </StackPanel>
-                                    <StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
-                                        <materialIcons:MaterialIcon Kind="AlertCircle" Foreground="Red"/>
-                                        <TextBlock VerticalAlignment="Center" Name="ErrPckText">Пакеты с ошибкой</TextBlock>
-                                    </StackPanel>
+                            <StackPanel Margin="5">
+                                <StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
+                                    <materialIcons:MaterialIcon Kind="ClockTimeEight" Foreground="Orange"/>
+                                    <TextBlock VerticalAlignment="Center" Name="Time">Время работы...</TextBlock>
                                 </StackPanel>
-                            </Border>
+                                <StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
+                                    <materialIcons:MaterialIcon Kind="Upload" Foreground="Orange"/>
+                                    <TextBlock VerticalAlignment="Center" Name="MUplText">Отправка</TextBlock>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
+                                    <materialIcons:MaterialIcon Kind="Download" Foreground="Green"/>
+                                    <TextBlock VerticalAlignment="Center" Name="MDwlText">Загрузка</TextBlock>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
+                                    <materialIcons:MaterialIcon Kind="AlertCircle" Foreground="Red"/>
+                                    <TextBlock VerticalAlignment="Center" Name="ErrPckText">Пакеты с ошибкой</TextBlock>
+                                </StackPanel>
+                            </StackPanel>
                         </ToolTip.Tip>
                     </Button>
 
@@ -132,14 +127,21 @@
                         <TextBlock Text="Конфиг"  FontWeight="Bold"/>
                     </StackPanel>
                 </TabItem.Header>
-                
-                <avaloniaEdit:TextEditor
-                    ShowLineNumbers="True"
-                    FontFamily="Consolas"
-                    FontSize="14"
-                    WordWrap="False"
-                    HorizontalScrollBarVisibility="Auto"
-                    VerticalScrollBarVisibility="Auto"/>
+
+                <DockPanel>
+                    <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
+                        <Button Content="Сохранить" FontWeight="Bold" Margin="20" Click="ClashConfigSave"/>
+                        <materialIcons:MaterialIcon Kind="CogClockwise" IconSize="30" Name="CfgWait"/>
+                    </StackPanel>
+                    <avaloniaEdit:TextEditor Name="Editor"
+                                             TextChanged="ConfigChanged"
+                                             ShowLineNumbers="True"
+                                             FontFamily="Consolas"
+                                             FontSize="14"
+                                             WordWrap="False"
+                                             HorizontalScrollBarVisibility="Auto"
+                                             VerticalScrollBarVisibility="Auto"/>
+                </DockPanel>
             </TabItem>
         </TabControl>
     </DockPanel>
