--- a/ObhodBApp/MainWindow.axaml
+++ b/ObhodBApp/MainWindow.axaml
@@ -48,9 +48,9 @@
                             FontSize="20" FontWeight="Bold">
                         <StackPanel Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
                             <materialIcons:MaterialIcon Kind="Upload" Foreground="Orange"/>
-                            <TextBlock VerticalAlignment="Center" Name="UplText">10Mb/s</TextBlock>
+                            <TextBlock VerticalAlignment="Center" Name="UplText">0B</TextBlock>
                             <materialIcons:MaterialIcon Kind="Download" Foreground="Green"/>
-                            <TextBlock VerticalAlignment="Center" Name="DwlText">10Mb/s</TextBlock>
+                            <TextBlock VerticalAlignment="Center" Name="DwlText">0B</TextBlock>
                         </StackPanel>
 
                         <ToolTip.Tip>
