--- a/ObhodBApp/Pages/Settings.axaml
+++ b/ObhodBApp/Pages/Settings.axaml
@@ -54,19 +54,19 @@
                         <NumericUpDown Minimum="5"
                                        Maximum="1000"
                                        Width="300"
-                                       Value="{Binding updateInterval, Mode=TwoWay}"
+                                       Value="{Binding updatesCount, Mode=TwoWay}"
                                        HorizontalAlignment="Left"/>
                     </StackPanel>
                 </Border>
             </StackPanel>
             
             <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
-                <materialIcons:MaterialIcon Kind="InformationSlabCircleOutline"/>
+                <materialIcons:MaterialIcon Foreground="Gray" Kind="InformationSlabCircleOutline"/>
                 <TextBlock Foreground="Gray" FontWeight="Bold" FontSize="13" Text="ObhodBApp, сделанная G0Shark. Версия 0.0.0DEV."/>
             </StackPanel>
             
             <StackPanel HorizontalAlignment="Right" Margin="0,10,0,0">
-                <Button Content="💾 Сохранить настройки"
+                <Button
                         Width="220"
                         Padding="10,5"
                         CornerRadius="8"
@@ -74,7 +74,12 @@
                         Foreground="White"
                         FontWeight="Bold"
                         HorizontalAlignment="Right"
-                        Click="Save" />
+                        Click="Save" >
+                    <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
+                        <materialIcons:MaterialIcon Kind="ContentSave"/>
+                        <TextBlock FontWeight="Bold" FontSize="20" Text="Сохранить"/>
+                    </StackPanel>
+                </Button>
             </StackPanel>
         </StackPanel>
     </ScrollViewer>
