--- a/ObhodBApp/MainWindow.axaml
+++ b/ObhodBApp/MainWindow.axaml
@@ -33,10 +33,7 @@
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
                     
-                    <ComboBox Grid.Row="0" HorizontalAlignment="Center" HorizontalContentAlignment="Center" FontSize="30" CornerRadius="100" Width="350" FontWeight="Bold" Margin="20" Padding="10" SelectedIndex="0">
-                        <ComboBoxItem>mediks</ComboBoxItem>
-                        <ComboBoxItem>sds</ComboBoxItem>
-                        <ComboBoxItem>saffag</ComboBoxItem>
+                    <ComboBox Grid.Row="0" Name="ConfigCombo" HorizontalAlignment="Center" SelectedIndex="-1" HorizontalContentAlignment="Center" FontSize="30" CornerRadius="100" MinWidth="350" FontWeight="Bold" Margin="20" Padding="10">
                     </ComboBox>
                     
                     <Button Grid.Row="1" Name="MainBtn" Margin="30" HorizontalAlignment="Center"
