--- a/ObhodBApp/MainWindow.axaml
+++ b/ObhodBApp/MainWindow.axaml
@@ -36,7 +36,7 @@
                     <ComboBox Grid.Row="0" Name="ConfigCombo" HorizontalAlignment="Center" SelectedIndex="-1" HorizontalContentAlignment="Center" FontSize="30" CornerRadius="100" MinWidth="350" FontWeight="Bold" Margin="20" Padding="10">
                     </ComboBox>
                     
-                    <Button Grid.Row="1" Name="MainBtn" Margin="30" HorizontalAlignment="Center"
+                    <Button IsEnabled="False" Grid.Row="1" Name="MainBtn" Margin="30" HorizontalAlignment="Center"
                             CornerRadius="100" Click="MainBtn_OnClick">
                         <materialIcons:MaterialIcon Name="MainBtnIcon" Padding="20" Kind="Web" IconSize="150" />
                     </Button>
