доработка, починка багов

--- a/ObhodBApp/Pages/ErrorMiddleware.axaml
+++ b/ObhodBApp/Pages/ErrorMiddleware.axaml
@@ -4,8 +4,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:materialIcons="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        Width="800"
+        Height="450"
         x:Class="ObhodBApp.Pages.ErrorMiddleware"
-        Title="ErrorMiddleware">
+        Title="Ошибка!">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
