--- a/ObhodBApp/Pages/CreateConnection.axaml
+++ b/ObhodBApp/Pages/CreateConnection.axaml
@@ -3,9 +3,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:materialIcons="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="200"
+        Width="500"
+        Height="200"
         x:Class="ObhodBApp.Pages.CreateConnection"
-        Title="CreateConnection">
+        Title="Создать соединение">
     <ListBox x:Name="OptionsListBox" SelectionChanged="Selected"
              SelectionMode="Single">
         <ListBoxItem>
