--- a/ObhodBApp/Pages/Settings.axaml
+++ b/ObhodBApp/Pages/Settings.axaml
@@ -84,6 +84,18 @@
                         <ToggleSwitch IsCheckedChanged="CheckToggle" IsChecked="{Binding Autostart}" HorizontalAlignment="Left"/>
                     </StackPanel>
                 </Border>
+                
+                <Border Background="{DynamicResource ThemeBackgroundBrush}"
+                        Padding="15"
+                        CornerRadius="10"
+                        BoxShadow="0 2 6 0 #00000033">
+                    <StackPanel Spacing="6" HorizontalAlignment="Left">
+                        <TextBlock Text="Реверсивное проксирование" FontWeight="Bold"/>
+                        <TextBlock Text="Выберите это, чтобы весь траффик КРОМЕ правил будет проходить через профиль."
+                                   FontSize="12" Foreground="Gray"/>
+                        <ToggleSwitch IsCheckedChanged="ReverseProxy" IsChecked="{Binding ReverseProxy}" HorizontalAlignment="Left"/>
+                    </StackPanel>
+                </Border>
             </StackPanel>
             
             <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Spacing="8" VerticalAlignment="Center">
