--- a/ObhodBApp/Pages/UpdateMsg.axaml
+++ b/ObhodBApp/Pages/UpdateMsg.axaml
@@ -8,7 +8,7 @@
         Height="200"
         CanResize="False"
         x:Class="ObhodBApp.UpdateMsg"
-        Title="UpdateMsg">
+        Title="Доступно обновление!">
         <Grid>
                 <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"></RowDefinition>
